<resources>
    <string name="app_name">Whatsapp clone</string>
    <string name="welcome_to_whatsapp">Welcome to whatsApp</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_the_terms_of_service">Read our Privacy Policy. Tap Agree and continueto accept the Terms of Service</string>
    <string name="agree_and_continue">agree and continue</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="whatsapp_will_send_an_sms_message_to_verify_your_phone_number">WhatsApp will send an SMS message to verify your phone number</string>
    <string name="plus">+</string>
    <string name="phone_number">Phone number</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="next">NEXT</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="hiphon">------</string>
    <string name="provide_your_name_and_an_optional_profile_photo">Provide your name and an optional profile photo</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="add_profile">Add profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="phone">Phone</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
    <string name="new_group">New group</string>
    <string name="new_contact">New contact</string>
    <string name="group_name">Group name</string>
    <string name="video_call">video call</string>
    <string name="audio_call">audio call</string>
    <string name="view_contact">View contact</string>
    <string name="media_links_and_docs">Media, links, and docs</string>
    <string name="mute_notification">Mute notification</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="type_a_message">Type a message</string>
</resources>