<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_icon_foreground"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/invite"
        app:showAsAction="never"
        android:title="@string/invite_a_friend">
    </item>
    <item
        android:id="@+id/contacts"
        app:showAsAction="never"
        android:title="@string/contacts">
    </item>
    <item
        android:id="@+id/refresh"
        app:showAsAction="never"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/help"
        app:showAsAction="never"
        android:title="@string/help">
    </item>
</menu>