<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.phoneAuht.PhoneAuthActivityc">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:textColor="@color/secondory_colour"
            android:text="@string/add_profile"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:id="@+id/text"
        android:layout_below="@id/toolbar"
        android:text="@string/provide_your_name_and_an_optional_profile_photo"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/user_icon"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_margin="20dp"
        android:id="@+id/profile_name"
        android:hint="@string/type_your_name_here"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_green"
        android:onClick="setName"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:text="@string/next"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>