<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.phoneAuht.PhoneAuthActivityb">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary_colour"
            android:text="@string/verify_your_phone_number"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/toolbar"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="We have send an SMS with a code to your number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_below="@id/sub_title"
        android:layout_height="wrap_content">





        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <EditText
                android:padding="20dp"
                android:inputType="phone"
                android:id="@+id/oyp_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hiphon"
                android:textSize="18sp"
                android:letterSpacing="1"
                android:gravity="center"
                tools:ignore="Autofill"
                tools:targetApi="lollipop" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Enter 6-digit code"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="verify"
        android:padding="10dp"
        android:text="@string/next"
        android:backgroundTint="@color/light_green"
        />
</RelativeLayout>